--- a/src/App.css
+++ b/src/App.css
@@ -1,123 +1,3 @@
-.Weather {
-  padding: 5px;
-}
-input,
-button.btn-search,
-button.btn-location {
-  margin: 0 5px 0 0;
-}
-h1 {
-  display: inline;
-}
-h2 {
-  color: var(--color-c);
-  font-size: 18px;
-  font-weight: 500;
-  margin: 0;
-}
-p {
-  margin: 0px;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-ul:first-letter {
-  text-transform: capitalize;
-}
-hr {
-  margin: 11px;
-}
-
-#city-input {
-  border-color: var(--color-a);
-}
-#city-input:focus {
-  border-color: var(--color-a);
-  box-shadow: 0 0 0 0.2rem rgb(255 222 125 / 25%);
-}
-.btn-search {
-  border-color: var(--color-c);
-  color: var(--color-c);
-}
-.btn-search:hover {
-  background: var(--color-c);
-  border-color: var(--color-c);
-  transition: all 500ms ease;
-}
-.btn-search:active {
-  border-color: var(--color-c);
-  background: var(--color-c);
-}
-.btn-search:focus {
-  box-shadow: 0 0 0 0.2rem rgb(246 65 108 / 25%);
-}
-.btn-location {
-  border-color: var(--color-b);
-  color: var(--color-b);
-}
-.btn-location:hover {
-  background: var(--color-b);
-  border-color: var(--color-b);
-  transition: all 500ms ease;
-}
-.btn-location:active {
-  border-color: var(--color-b);
-  background: var(--color-b);
-}
-.btn-location:focus {
-  box-shadow: 0 0 0 0.2rem rgb(0 184 169 / 25%);
-}
-.btn-labels {
-  border-color: var(--color-d);
-  color: var(--color-d);
-}
-.btn-labels.active,
-.btn-labels:hover {
-  background-color: var(--color-d);
-  border-color: var(--color-d);
-  color: white;
-}
-.btn-unit-inputs:active + .btn-labels {
-  color: white;
-  background-color: var(--color-b);
-  border-color: var(--color-b);
-}
-.btn-unit-inputs:focus + .btn-labels,
-.btn-labels:focus {
-  box-shadow: 0 0 0 0.2rem rgb(26 83 92 / 25%);
-}
-#country {
-  font-size: small;
-  font-style: italic;
-}
-.row {
-  --bs-gutter-x: 5px;
-}
-.card-today h2 strong {
-  font-size: 65px;
-  line-height: 0.9;
-}
-.icon-now {
-  color: var(--color-d);
-  font-size: 80px;
-}
-.big-icon {
-  color: var(--color-d);
-  font-size: 45px;
-}
-.small-icon,
-.temperatures-max {
-  color: var(--color-d);
-  font-weight: 600;
-}
-#disclaimer {
-  color: var(--color-c);
-  font-size: smaller;
-  font-weight: 600;
-  margin: -5px 0px 5px 0px;
-}
 .card-footer {
   background-color: #f8f3d4;
   border-top: 1px solid var(--color-a);
@@ -125,7 +5,7 @@ hr {
   font-size: small;
   text-align: center;
 }
-.github-link,
-.github-link:visited {
+.footer-link,
+.footer-link:visited {
   color: var(--color-d);
 }
