Added root and basic CSS

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
-.card-footer {
-  background-color: #f8f3d4;
-  border-top: 1px solid var(--color-a);
-  display: block;
-  font-size: small;
-  text-align: center;
+:root {
+  --color-a: #ffde7d;
+  --color-b: #00b8a9;
+  --color-c: #f6416c;
+  --color-d: #1a535c;
 }
-.footer-link,
-.footer-link:visited {
-  color: var(--color-d);
+
+.App {
+  border-color: var(--color-a);
+  color: var(--color-b);
+  display: block;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 650px;
 }
