Added capitalized descriptions to forecasts

--- a/src/WeatherForecastDays.css
+++ b/src/WeatherForecastDays.css
@@ -1,3 +1,7 @@
+.WeatherForecastDays .description:first-letter {
+  text-transform: capitalize;
+}
+
 .WeatherForecastDays .temperature-max {
   color: var(--color-d);
   font-weight: 600;
