--- a/src/WeatherForecastHours.css
+++ b/src/WeatherForecastHours.css
@@ -1,3 +1,8 @@
+.WeatherForecastHours .description:first-letter {
+  text-transform: capitalize;
+}
+
 .WeatherForecastHours .temperature {
+  color: var(--color-d);
   font-weight: 600;
 }
